# tabib

./: .gitignore  CLAUDE.md  INFO.md  download-datasets.sh  ner_span.md  nlstruct.md  pyproject.toml
benchmark_results/: SUMMARY.md  almanach--moderncamembert-base.json  almanach--moderncamembert-base.md  moderncamembert-atc.json  moderncamembert-atc.md  moderncamembert-cim10.md  moderncamembert-code-mix.json  moderncamembert-emea-notice.json  moderncamembert-emea-original.md  moderncamembert-fineweb2-only.md  moderncamembert-full-mix-equal.json  moderncamembert-full-mix-proportional.json  moderncamembert-full-mix-proportional.md  moderncamembert-hal-original.md  moderncamembert-hal-scientific.json  moderncamembert-hal-textbook.json  moderncamembert-istex-abstract.json  moderncamembert-istex-original.json  moderncamembert-istex-original.md  moderncamembert-istex-scientific.md  moderncamembert-istex-textbook.md  moderncamembert-pmc-patients.md  moderncamembert-synthetic-clinical.json  moderncamembert-synthetic-clinical.md
configs/: ablation-v1-eval.yaml  benchmark_3epoch_5seed.yaml  benchmark_bert_drbenchmark.yaml  benchmark_biomed_eval.yaml  benchmark_gaperon8b_compare.yaml  benchmark_gaperon_all_gpu0.yaml  benchmark_gaperon_all_gpu1.yaml  benchmark_gaperon_full.yaml  benchmark_span_ner_comparison.yaml  cls_diamed_camembert.yaml  cls_diamed_camembert_bio.yaml  cls_diamed_moderncamembert.yaml  cls_essai_camembert.yaml  cls_essai_camembert_bio.yaml  cls_essai_moderncamembert.yaml  cls_morfitt_camembert.yaml  cls_morfitt_camembert_bio.yaml  cls_morfitt_moderncamembert.yaml  (+172 more)
(+256 files in other folders)
